--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -37,9 +37,16 @@
 		position: absolute;
 		top: 0;
 		left: 15px;
-		right: 15px;
 		text-align: center;
-		padding: 5rem 2rem;
+		padding: 2rem 2rem;
+
+-webkit-border-bottom-right-radius: 10px;
+-webkit-border-bottom-left-radius: 10px;
+-moz-border-radius-bottomright: 10px;
+-moz-border-radius-bottomleft: 10px;
+border-bottom-right-radius: 10px;
+border-bottom-left-radius: 10px;
+
 
 		&.light { background-color: #fff; }
 		&.dark { background-color: $color-dark; }
