--- a/assets/scss/_elements/_navs.scss
+++ b/assets/scss/_elements/_navs.scss
@@ -62,6 +62,8 @@
 			font-weight: 500; 
 			padding: 0.75rem 0; 
 			display: block;
+			color: $color-global;
+			text-decoration: none;
 
 			&:hover, &:focus {
 				background: transparent;
