rm underlines on header and nav links

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -21,6 +21,9 @@
 	&.transparent { background-color: transparent; color: #fff; }
 
 	.module {
+    a {
+      text-decoration: none;
+    }
 		line-height: $header-height-inner;
 		display: inline-block;
 		
