revert link style changes
reverts parts of
0da2227
5a8f46b

turns out they had thought the theme through pretty well and i just
screwed it up

--- a/assets/scss/_setup.scss
+++ b/assets/scss/_setup.scss
@@ -35,12 +35,11 @@ button, input {
 }
 
 a {
-	color: $color-primary;
-	text-decoration: underline;
+	color: inherit;
 	@include transition(all 0.2s ease-in-out);
 }
 
-a:hover, a:focus { color: blue; }
+a:hover, a:focus { text-decoration: none; color: $color-primary; }
 
 textarea:focus, input:focus, a:focus, a:visited, *:focus { outline: none; }
 
