--- a/assets/scss/_elements/_typography.scss
+++ b/assets/scss/_elements/_typography.scss
@@ -82,6 +82,14 @@ p {
 p.lead {
 	font-size: 1.2rem;
 	font-weight: 400;
+  a {
+    color: $color-primary;
+    text-decoration: underline;
+
+    &:hover {
+      color: inherit;
+    }
+  }
 }
 
 /* Blockquote */
