use same navigation on all pages

--- a/assets/scss/_header/_navigation-desktop.scss
+++ b/assets/scss/_header/_navigation-desktop.scss
@@ -16,6 +16,10 @@
             margin-right: 1.5rem;
         }
 
+        &.selected {
+          border-bottom: 2px solid $color-global;
+        }
+
         &.has-dropdown {
             > a {
                 &:after {
