--- a/assets/scss/_content/_page-title.scss
+++ b/assets/scss/_content/_page-title.scss
@@ -22,18 +22,19 @@
     }
 
     h1 {
-        font-size: 5.5rem;
+        font-size: 4.5rem;
+        font-weight: 300;
 
         @media #{$screen-xl} {
-            font-size: 4.75rem;
+            font-size: 3.75rem;
         }
 
         @media #{$screen-md} {
-            font-size: 4rem;
+            font-size: 3rem;
         }
 
         @media #{$screen-xs} {
-            font-size: 3.5rem;
+            font-size: 2.5rem;
         }
     }
 }
